--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -138,19 +138,54 @@ $user-size: 80px;
   background: rgb(146, 146, 146);
   // transform: rotate(180deg) translateY($table-size/2 + $user-size/2 + 30px);
   transition: transform 1s;
+  cursor: default;
 
   &--self {
     border: 4px solid black;
     .user__name {
-      top: 19px;
+      top: 22px;
+    }
+  }
+
+  &:hover {
+    .user__tooltip {
+      opacity: 1;
+      visibility: visible;
     }
   }
 
   &__name {
     position: relative;
-    top: 19px;
+    top: 22px;
     right: 0;
     text-align: center;
+  }
+
+  &__tooltip {
+    opacity: 0;
+    visibility: hidden;
+    position: relative;
+    top: -83px;
+    padding: 8px;
+    width: fit-content;
+    border-radius: 8px;
+    white-space: nowrap;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    font-weight: normal;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+
+    &:before {
+      content: '';
+      width: 12px;
+      height: 12px;
+      position: absolute;
+      top: 28px;
+      left: 32px;
+      background: black;
+      transform: rotate(45deg);
+    }
   }
 
   &__card {
