--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -189,13 +189,13 @@ $user-size: 80px;
   }
 
   &__card {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: -97px;
     width: 48px;
-    right: 15px;
+    top: 121px;
+    right: 126px;
     height: 60px;
     background-color: white;
     border-radius: 8px;
@@ -203,6 +203,12 @@ $user-size: 80px;
     &-number {
       font-size: 24px;
     }
+  }
+
+  &__table-cards {
+    display: inline-flex;
+    top: 50%;
+    left: 50%;
   }
 }
 
