--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -4,13 +4,21 @@ body {
   font-family: 'lato', sans-serif;
 }
 
+.slide-fade-enter-active, .slide-fade-leave-active {
+  transition: opacity 0.3s ease, transform 0.3s ease !important;
+}
+
+.slide-fade-enter, .slide-fade-leave-to {
+  opacity: 0;
+  transform: translateY(100px);
+}
+
 .username {
   position: absolute;
   display: flex;
   align-items: center;
   top: 16px;
   right: 10px;
-
   min-width: 80px;
   max-width: 200px;
   margin-right: 8px;
@@ -131,17 +139,17 @@ $user-size: 80px;
   height: $user-size;
   border-radius: 50%;
   position: absolute;
-  top: calc(50% - #{$user-size}/2);
-  left: calc(50% - #{$user-size}/2);
+  top: calc(50% - #{$user-size + 8}/2);
+  left: calc(50% - #{$user-size + 8}/2);
   font-size: 32px;
   font-weight: bold;
   background: rgb(146, 146, 146);
-  // transform: rotate(180deg) translateY($table-size/2 + $user-size/2 + 30px);
+  border: 4px solid rgb(146, 146, 146);
   transition: transform 1s;
   cursor: default;
 
   &--self {
-    border: 4px solid black;
+    border-color:black;
     .user__name {
       top: 22px;
     }
@@ -166,6 +174,7 @@ $user-size: 80px;
     visibility: hidden;
     position: relative;
     top: -83px;
+    left: 16px;
     padding: 8px;
     width: fit-content;
     border-radius: 8px;
@@ -182,7 +191,7 @@ $user-size: 80px;
       height: 12px;
       position: absolute;
       top: 28px;
-      left: 32px;
+      left: 17px;
       background: black;
       transform: rotate(45deg);
     }
