--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -2,6 +2,7 @@ body {
   background: rgb(73, 73, 73);
   overflow: hidden;
   font-family: 'lato', sans-serif;
+  margin: 0;
 }
 
 .slide-fade-enter-active, .slide-fade-leave-active {
@@ -28,6 +29,18 @@ body {
 
 .fade-enter, .fade-leave-to {
   opacity: 0;
+}
+
+.blur {
+  display:block;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  backdrop-filter: blur(15px);
+  background-color: rgba(0, 0, 0, .5);
+  transition: backdrop-filter 0.3s ease;
 }
 
 .username {
