--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -49,8 +49,6 @@ body {
   align-items: center;
   top: 16px;
   right: 10px;
-  min-width: 80px;
-  max-width: 200px;
   margin-right: 8px;
   padding: 8px;
   color: white;
@@ -64,6 +62,27 @@ body {
 
   &:hover {
     opacity: 0.7;
+  }
+
+  &__input {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 16px;
+    right: 10px;
+    padding: 8px;
+    border-radius: 8px;
+    font-size: 18px;
+    opacity: 0.5;
+    transition: opacity 0.3s ease;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: black;
+
+    &:focus {
+      background-color: red;
+    }
   }
 }
 
@@ -80,7 +99,7 @@ body {
     margin-right: 8px;
   }
 
-  &__number {
+  &__id {
     min-width: 80px;
     max-width: 200px;
     margin-right: 8px;
