--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -48,8 +48,7 @@ body {
   display: flex;
   align-items: center;
   top: 16px;
-  right: 10px;
-  margin-right: 8px;
+  right: 16px;
   padding: 8px;
   color: white;
   background-color: black;
@@ -69,7 +68,7 @@ body {
     display: flex;
     align-items: center;
     top: 16px;
-    right: 10px;
+    right: 16px;
     padding: 8px;
     border-radius: 8px;
     font-size: 18px;
@@ -81,7 +80,7 @@ body {
     background-color: black;
 
     &:focus {
-      background-color: red;
+      opacity: 1;
     }
   }
 }
@@ -91,7 +90,7 @@ body {
   display: flex;
   align-items: center;
   top: 16px;
-  left: 10px;
+  left: 16px;
   font-size: 24px;
   color: darkgray;
 
@@ -100,26 +99,44 @@ body {
   }
 
   &__id {
-    min-width: 80px;
-    max-width: 200px;
-    margin-right: 8px;
-    padding: 8px;
-    color: white;
-    background-color: black;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    opacity: 0.5;
-    transition: opacity 0.3s ease;
+    &-input {
+      min-width: 80px;
+      max-width: 200px;
+      margin-right: 8px;
+      padding: 8px;
+      color: white;
+      background-color: black;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      font-size: 18px;
+      opacity: 0.5;
+      transition: opacity 0.3s ease;
+  
+      &:hover {
+        opacity: 0.7;
+      }
+    }
 
-    &:hover {
-      opacity: 0.7;
+    &-div {
+      margin-right: 8px;
+      padding: 8px;
+      color: white;
+      background-color: black;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      font-size: 18px;
+      opacity: 0.5;
+      transition: opacity 0.3s ease;
+    
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
 
   &__join {
-    margin-right: 8px;
     padding: 8px;
     font-size: 18px;
     border: none;
