--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -1,8 +1,12 @@
 body {
-  background: rgb(73, 73, 73);
+  background: #494949;
   overflow: hidden;
   font-family: 'lato', sans-serif;
   margin: 0;
+}
+
+input {
+  font-family: 'lato', sans-serif;
 }
 
 .slide-fade-enter-active, .slide-fade-leave-active {
@@ -351,39 +355,6 @@ $user-size: 80px;
       transform: translateY(-20px);
       border-color: black;
       opacity: 1;
-    }
-  }
-}
-
-
-
-.chat {
-  position: absolute;
-  width: 400px;
-  height: 500px;
-  max-height: 100vh;
-  right: 0;
-  bottom: 0;
-  background-color: darkgray;
-
-  &__message {
-
-  }
-
-  &__input {
-    position: absolute;
-    display: flex;
-    bottom: 0;
-    width: 100%;
-    input {
-      padding: 16px;
-      width: 100%;
-      height: 48px;
-      margin-right: 8px;
-    }
-
-    button {
-      width: 80px;
     }
   }
 }
