--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -44,10 +44,15 @@
       margin-bottom: 12px;
     }
     &-user {
+      display: inline-block;
       margin-right: 8px;
-      padding: 4px;
+      padding: 4px 8px;
       background-color: #4b4a4a;
       border-radius: 4px;
+
+      &--important {
+        background-color: #7d0000;
+      }
     }
     &-text {
 
@@ -58,7 +63,7 @@
     display: flex;
     width: 100%;
     input {
-      padding: 16px;
+      padding: 8px;
       width: 80%;
       height: 16px;
       margin-right: 8px;
@@ -83,7 +88,7 @@
       width: 100px;
       font-size: 20px;
       border: 4px solid #2b2b2b;
-      border-radius: 8px;
+      border-radius: 4px;
       background-color: #2b2b2b;
       color: white;
       outline: none;
