--- a/client/src/components/Tooltip/Tooltip.scss
+++ b/client/src/components/Tooltip/Tooltip.scss
@@ -1,11 +1,11 @@
 .tooltip {
   opacity: 0;
-  // visibility: hidden;
+  visibility: hidden;
   position: relative;
   top: -88px;
-  left: 16px;
   padding: 8px;
   width: fit-content;
+  min-width: 30px;
   border-radius: 8px;
   white-space: nowrap;
   background-color: black;
@@ -15,8 +15,7 @@
   transition: opacity 0.3s ease, visibility 0.3s ease;
   z-index: 999999;
 
-  &:before {
-    content: '';
+  &__arrow {
     width: 12px;
     height: 12px;
     position: absolute;
