--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -18,15 +18,6 @@ input {
   transform: translateY(100px);
 }
 
-.slide-card-enter-active, .slide-card-leave-active {
-  transition: opacity 0.3s ease, transform 0.3s ease !important;
-}
-
-.slide-card-enter, .slide-card-leave-to {
-  opacity: 0;
-  transform: translateY(120px) !important;
-}
-
 .fade-enter-active, .fade-leave-active {
   transition: opacity 0.3s ease;
 }
@@ -182,7 +173,6 @@ $table-size: 300px;
   border-radius: 50%;
   background: rgb(56, 56, 56);
   box-shadow: 0 0 12px 0 #383838;
-  top: -100px;
 
   &__cta {
     position: absolute;
@@ -252,21 +242,25 @@ $user-size: 80px;
     align-items: center;
     width: 48px;
     height: 64px;
-    top: 121px;
-    right: 126px;
+    top: 8px;
+    right: 16px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
 
     &-number {
       font-size: 32px;
-    }
-  }
 
-  &__table-cards {
-    display: inline-flex;
-    top: 50%;
-    left: 50%;
+      &--reversed {
+        transform: rotate(180deg);
+      }
+    }
+
+    &--show {
+      opacity: 1;
+    }
   }
 }
 
