--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -251,7 +251,8 @@ $user-size: 80px;
     transition: opacity 0.3s ease;
 
     &-number {
-      font-size: 32px;
+      font-size: 24px;
+      font-weight: normal;
 
       &--reversed {
         transform: rotate(180deg);
@@ -266,15 +267,18 @@ $user-size: 80px;
 
 .cards-deck {
   position: absolute;
-  width: 100%;
+  left: 0;
+  right: 0;
   bottom: -70px;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
   padding: 20px 0;
   transition: transform 0.3s ease;
 
   &:hover {
     transform: translateY(-70px);
+    z-index: 1;
   }
 
   &__card {
@@ -288,20 +292,18 @@ $user-size: 80px;
     background-color: white;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
     cursor: pointer;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-    opacity: 0.6;
+    transition: transform 0.3s ease;
 
     &:hover {
       transform: translateY(-20px);
-      opacity: 1;
     }
   
     &+& {
-      margin-left: 16px;
+      margin-left: calc(((50vw / 14) - 72px));
     }
   
     &-number {
-      font-size: 48px;
+      font-size: 36px;
     }
   
     &--selected {
