--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -39,11 +39,11 @@ input {
   border: none;
   outline: none;
   font-size: 18px;
-  opacity: 0.5;
+  opacity: 0.7;
   transition: opacity 0.3s ease;
 
   &:hover {
-    opacity: 0.7;
+    opacity: 1;
   }
 
   &__input {
@@ -55,7 +55,7 @@ input {
     padding: 8px;
     border-radius: 8px;
     font-size: 18px;
-    opacity: 0.5;
+    opacity: 0.7;
     transition: opacity 0.3s ease;
     border: none;
     outline: none;
@@ -75,7 +75,7 @@ input {
   top: 16px;
   left: 16px;
   font-size: 24px;
-  color: darkgray;
+  color: white;
 
   &__label {
     margin-right: 8px;
@@ -83,8 +83,6 @@ input {
 
   &__id {
     &-input {
-      min-width: 80px;
-      max-width: 200px;
       margin-right: 8px;
       padding: 8px;
       color: white;
@@ -93,11 +91,11 @@ input {
       border: none;
       outline: none;
       font-size: 18px;
-      opacity: 0.5;
+      opacity: 0.7;
       transition: opacity 0.3s ease;
   
-      &:hover {
-        opacity: 0.7;
+      &:focus {
+        opacity: 1;
       }
     }
 
@@ -110,11 +108,11 @@ input {
       border: none;
       outline: none;
       font-size: 18px;
-      opacity: 0.5;
+      opacity: 0.7;
       transition: opacity 0.3s ease;
     
       &:hover {
-        opacity: 0.7;
+        opacity: 1;
       }
     }
   }
@@ -285,8 +283,8 @@ $user-size: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 64px;
-    height: 96px;
+    width: 48px;
+    height: 64px;
     border-radius: 8px;
     border: 4px solid white;
     background-color: white;
@@ -299,11 +297,11 @@ $user-size: 80px;
     }
   
     &+& {
-      margin-left: calc(((50vw / 14) - 72px));
+      margin-left: 8px;
     }
   
     &-number {
-      font-size: 36px;
+      font-size: 24px;
     }
   
     &--selected {
