--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -271,6 +271,7 @@ $user-size: 80px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  width: 900px;
   padding: 20px 0;
   transition: transform 0.3s ease;
 
