--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -1,21 +1,63 @@
 .chat {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  bottom: 16px;
-  right: 16px;
-  width: 350px;
-  height: 400px;
-  padding: 16px;
-  max-height: calc(100vh - 100px);
-  background-color: #3b3b3b;
-  border-radius: 8px;
-  box-sizing: border-box;
-  transition: background-color 0.3s ease;
+  &--open {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    bottom: 16px;
+    right: 16px;
+    width: 350px;
+    height: 400px;
+    padding: 16px;
+    max-height: calc(100vh - 100px);
+    background-color: #3b3b3b;
+    border-radius: 8px;
+    box-sizing: border-box;
+    transition: background-color 0.3s ease;
+  
+    &:hover {
+      background-color: #383838;
+    }
+  }
 
-  &:hover {
-    background-color: #383838;
+  &__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
+    width: 96px;
+    height: 48px;
+    font-size: 24px;
+    border-radius: 32px;
+    color: white;
+    background-color: #2c2c2c;
+    cursor: pointer;
+  }
+
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    margin-top: -4px;
+    margin-bottom: 16px;
+    color: white;
+    font-size: 24px;
+    border-bottom: 2px solid #2b2b2b;
+  }
+
+  &__close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -10px;
+    margin-right: -12px;
+    padding: 16px;
+    width: 16px;
+    height: 16px;
+    color: white;
+    font-size: 32px;
+    cursor: pointer;
   }
 
   &__messages {
