--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -26,6 +26,15 @@ input {
   opacity: 0;
 }
 
+.version-hash {
+  position: absolute;
+  bottom: 4px;
+  left: 4px;
+  font-size: 12px;
+  color: #696969;
+  text-decoration: none;
+}
+
 .logo {
   display: flex;
   align-items: center;
