--- a/client/src/views/index.scss
+++ b/client/src/views/index.scss
@@ -26,13 +26,25 @@ input {
   opacity: 0;
 }
 
-.version-hash {
+.github {
   position: absolute;
   bottom: 4px;
   left: 4px;
-  font-size: 12px;
-  color: #696969;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  z-index: -1;
+  
+  img {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+  }
+
+  a {
+    font-size: 14px;
+    color: #000000;
+    text-decoration: none;
+  }
 }
 
 .logo {
