--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -14,6 +14,7 @@
     border-radius: 8px;
     box-sizing: border-box;
     transition: background-color 0.3s ease;
+    z-index: 100;
   
     &:hover {
       background-color: #383838;
